--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,4 +1,4 @@
-/* Generated on: Fri Jul 08 2022 16:04:15 GMT+0000 (Coordinated Universal Time) */
+/* Generated on: Sat Jul 09 2022 09:41:48 GMT+0000 (Coordinated Universal Time) */
 /* ==========================================================================
    normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css 
    ========================================================================== */
@@ -1861,31 +1861,184 @@ textarea.w-select {
    Start of custom Webflow CSS
    ========================================================================== */
 body {
-  background-color: #131313;
-  font-family: Inter, sans-serif;
-  color: #fff;
-  font-size: 13px;
-  line-height: 20px;
+  font-family: Montserrat, sans-serif;
+  color: #000;
+  font-size: 100%;
+  line-height: 100%;
 }
 
-a {
-  text-decoration: none;
+img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
 }
 
-.mm--delete-me {
-  position: fixed;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: auto;
-  z-index: 9999;
+.hero {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 32px;
-  padding-right: 32px;
-  padding-left: 32px;
+  width: 100%;
+  height: 90vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #000;
+  color: #fff;
+  font-size: 1em;
+  text-align: center;
+}
+
+.inline-link {
+  -webkit-transition: color 200ms ease-in;
+  transition: color 200ms ease-in;
+  color: hsla(0, 0%, 100%, 0.8);
+}
+
+.inline-link:hover {
+  color: #fff;
+}
+
+.snippet {
+  display: none;
+  margin-bottom: 20px;
+}
+
+.footer {
+  padding: 35px 20px;
+  background-color: #dadada;
+}
+
+.footer.right {
+  border-top: 1px solid #313131;
+  background-color: #000;
+}
+
+.footer-text {
+  display: inline-block;
+}
+
+.footer-text.right {
+  float: right;
+  color: #fff;
+}
+
+.particles {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  display: block;
+  width: 100%;
+  height: 100vh;
+}
+
+.div-block {
+  position: relative;
+}
+
+.heading {
+  margin-top: 0px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #dadada;
+  font-size: 60px;
+  line-height: 100px;
+}
+
+.heading.c-name {
+  margin-top: 0px;
+  padding: 10px 40px;
+  border-radius: 10px;
+  background-color: hsla(0, 0%, 85.5%, 0.12);
+  color: #dadada;
+  font-size: 100px;
+  line-height: 150px;
+}
+
+.div-scoial-media-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: auto;
+  margin-left: 0px;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  background-color: transparent;
+}
+
+.links {
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.div-icon-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  border-radius: 20px;
+  background-color: #414141;
+  -webkit-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+
+.icons {
+  width: 15px;
+  height: 15px;
+}
+
+.container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
@@ -1896,386 +2049,62 @@ a {
   align-items: center;
 }
 
-.mm__menu {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+.paragraph {
+  margin-top: 20px;
+  color: #dadada;
 }
 
-.mm__menu-button {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: 40px;
-  margin-right: 16px;
-  padding-right: 16px;
-  padding-left: 8px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 20px;
-  background-color: #ebebeb;
-  -webkit-transition: background-color 200ms ease;
-  transition: background-color 200ms ease;
-  color: #131313;
-  line-height: 13px;
-  font-weight: 600;
-  cursor: pointer;
+html.w-mod-js *[data-ix="sub-heading"] {
+  opacity: 0;
+  -webkit-transform: translate(0px, 50px);
+  -ms-transform: translate(0px, 50px);
+  transform: translate(0px, 50px);
 }
 
-.mm__menu-button:hover {
-  background-color: #fff;
-}
-
-.mm__buttons {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: -8px;
-  margin-left: -8px;
-}
-
-.mm__button {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: 40px;
-  margin-right: 8px;
-  margin-left: 8px;
-  padding-right: 16px;
-  padding-left: 16px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-style: solid;
-  border-width: 1px;
-  border-color: hsla(0, 0%, 100%, 0.25);
-  border-radius: 20px;
-  -webkit-transition: background-color 200ms ease, border 200ms ease;
-  transition: background-color 200ms ease, border 200ms ease;
-  color: #fff;
-  font-weight: 600;
-  text-decoration: none;
-}
-
-.mm__button:hover {
-  border-color: #fff;
-  text-decoration: none;
-}
-
-.mm__button.mm__button--f {
-  height: 28px;
-  padding-right: 12px;
-  padding-bottom: 2px;
-  padding-left: 12px;
-  font-size: 10px;
-  line-height: 12px;
-  font-weight: 400;
-}
-
-.mm__button.mm__button--f.mm__button--twitter {
-  padding-bottom: 1px;
-  border-color: hsla(0, 0%, 100%, 0);
-  background-color: #1d9bf0;
-}
-
-.mm__button.mm__button--f.mm__button--twitter:hover {
-  background-color: #0873bb;
-}
-
-.mm__button-icon {
-  width: 12px;
-  height: 12px;
-  margin-right: 8px;
-}
-
-.mm__button-icon.big {
-  width: 18px;
-  height: 18px;
-}
-
-.mm__sponsor {
-  position: fixed;
-  top: auto;
-  right: 24px;
-  bottom: 32px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.mm__bold {
-  font-weight: 600;
-}
-
-.mm__css {
-  position: absolute;
-  left: -9999em;
-  top: -9999em;
-}
-
-.mm__sidebar-close {
-  position: absolute;
-  top: 20px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-}
-
-.mm__sidebar-scrim {
-  position: fixed;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  background-color: rgba(19, 19, 19, 0.5);
-}
-
-.page-wrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      from(rgba(0, 0, 0, 0.94)),
-      to(rgba(0, 0, 0, 0.94))
-    ),
-    url("https://uploads-ssl.webflow.com/62c84c4bad048282224435a2/62c855140e1ce47ccc331b7a_coding_bg-scaled.jpg");
-  background-image: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0.94),
-      rgba(0, 0, 0, 0.94)
-    ),
-    url("https://uploads-ssl.webflow.com/62c84c4bad048282224435a2/62c855140e1ce47ccc331b7a_coding_bg-scaled.jpg");
-  background-position: 0px 0px, 50% 100%;
-  background-size: auto, cover;
-}
-
-.card {
-  position: relative;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-
-.card__bg {
-  width: 400px;
-  height: 400px;
-  border-radius: 100%;
-  background-image: linear-gradient(
-      29deg,
-      transparent 37%,
-      rgba(42, 99, 255, 0.93)
-    ),
-    linear-gradient(135deg, #28eeac, #f3f177 41%, #fd6d38 71%, #a48eb6);
-}
-
-.card__front {
-  position: absolute;
-  left: 4px;
-  top: 4px;
-  right: 4px;
-  bottom: 4px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: hidden;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 100%;
-  background-color: #131313;
-}
-
-.card__glow {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  width: 400px;
-  height: 400px;
-  border-radius: 100%;
-  background-image: linear-gradient(
-      29deg,
-      transparent 37%,
-      rgba(42, 99, 255, 0.93)
-    ),
-    linear-gradient(135deg, #28eeac, #f3f177 41%, #fd6d38 71%, #a48eb6);
-  opacity: 0.7;
-  -webkit-filter: blur(12px);
-  filter: blur(12px);
-}
-
-.card__holo-glow {
-  position: absolute;
-  left: -48px;
-  top: -48px;
-  right: -48px;
-  bottom: -48px;
-  border-radius: 24px;
-  background-image: linear-gradient(
-      29deg,
-      transparent 37%,
-      rgba(42, 99, 255, 0.93)
-    ),
-    linear-gradient(135deg, #28eeac, #f3f177 41%, #fd6d38 71%, #a48eb6);
-  opacity: 0.2;
-  -webkit-filter: blur(20px);
-  filter: blur(20px);
-}
-
-.card__front-glow-mask {
-  position: absolute;
-  left: 16px;
-  top: 16px;
-  right: 16px;
-  bottom: 16px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-color: #131313;
-  background-image: url("https://uploads-ssl.webflow.com/62c84c4bad048282224435a2/62c84c4bad04824d404435b3_simon-lee-9QbuKUPFaNI-unsplash.jpeg");
-  background-position: 50% 50%;
-  background-size: cover;
-}
-
-.heading {
-  margin-top: 0px;
-  margin-bottom: 40px;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#fc703a),
-    to(#4969e5)
-  );
-  background-image: linear-gradient(180deg, #fc703a, #4969e5);
-  font-family: "Great Vibes", cursive;
-  font-size: 100px;
-  line-height: 200px;
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.heading:hover {
-  -webkit-filter: hue-rotate(180deg);
-  filter: hue-rotate(180deg);
-}
-
-.heading.code {
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  font-family: Oswald, sans-serif;
-  text-align: center;
-}
-
-.div-block {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+html.w-mod-js *[data-ix="scroll-in"] {
+  opacity: 0;
+  -webkit-transform: translate(0px, 35px);
+  -ms-transform: translate(0px, 35px);
+  transform: translate(0px, 35px);
 }
 
 @media screen and (max-width: 991px) {
-  .mm__title {
-    display: none;
+  .particles {
+    display: block;
+  }
+
+  .heading.c-name {
+    font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .heading {
+    font-size: 40px;
+  }
+
+  .heading.c-name {
+    font-size: 60px;
   }
 }
 
 @media screen and (max-width: 479px) {
-  .mm__sponsor {
-    right: 0px;
-  }
-
-  .card__bg {
-    width: 250px;
-    height: 250px;
-  }
-
-  .card__glow {
-    width: 250px;
-    height: 250px;
-  }
-
   .heading {
-    font-size: 50px;
-    line-height: 100px;
+    font-size: 30px;
+    line-height: 80px;
+  }
+
+  .heading.c-name {
+    font-size: 30px;
+    line-height: 80px;
+  }
+
+  .div-scoial-media-wrapper {
+    margin-right: 10px;
+    margin-left: 0px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
